--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mysql2": "^3.14.1",
     "wechatpay-node-v3": "^2.2.1"
   }
 }
